fix: docs update github repo link.

--- a/documentation/site/index.html
+++ b/documentation/site/index.html
@@ -130,7 +130,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="https://github.com/Germano123/edit/master/docs/index.md" class="nav-link"><i class="fa-brands fa-github"></i> Edit on GitHub</a>
+                                <a href="https://github.com/Germano123/python-hero-dungeon.git/edit/master/docs/index.md" class="nav-link"><i class="fa-brands fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
@@ -276,5 +276,5 @@
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-01-11 04:14:50.646843+00:00
+Build Date UTC : 2025-01-11 12:27:27.412969+00:00
 -->
