--- a/documentation/site/404.html
+++ b/documentation/site/404.html
@@ -120,7 +120,7 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a href="https://github.com/Germano123" class="nav-link"><i class="fa-brands fa-github"></i> GitHub</a>
+                                <a href="https://github.com/Germano123/python-hero-dungeon.git" class="nav-link"><i class="fa-brands fa-github"></i> GitHub</a>
                             </li>
                     </ul>
                 </div>
