--- a/documentation/site/heroes/3 algorithms/index.html
+++ b/documentation/site/heroes/3 algorithms/index.html
@@ -130,7 +130,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="https://github.com/Germano123/edit/master/docs/heroes/3 algorithms.md" class="nav-link"><i class="fa-brands fa-github"></i> Edit on GitHub</a>
+                                <a href="https://github.com/Germano123/python-hero-dungeon.git/edit/master/docs/heroes/3 algorithms.md" class="nav-link"><i class="fa-brands fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
