--- a/documentation/site/index.html
+++ b/documentation/site/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Hero Dungeon - An endless dungeon auto crawler with evolutionary heroes.">
+        <meta name="description" content="Hero Evolution - An endless dungeon auto crawler with evolutionary heroes.">
         
         
         <link rel="shortcut icon" href="img/favicon.ico">
-        <title>Hero Dungeon</title>
+        <title>Hero Evolution</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/fontawesome.min.css" rel="stylesheet">
         <link href="css/brands.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <body class="homepage">
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href=".">Hero Dungeon</a>
+                <a class="navbar-brand" href=".">Hero Evolution</a>
                 <!-- Expander button -->
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -106,10 +106,13 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a href="installation/" class="nav-link">Installation</a>
+                                <a href="installation/1%20installation/" class="nav-link">Installation</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contribution/" class="nav-link">Contribution</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="roadmap/" class="nav-link">Roadmap</a>
                             </li>
                         </ul>
 
@@ -130,7 +133,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="https://github.com/Germano123/python-hero-dungeon" class="nav-link"><i class="fa-brands fa-github"></i> Edit on GitHub</a>
+                                <a href="https://github.com/Germano123/python-hero-dungeon.git/edit/master/docs/index.md" class="nav-link"><i class="fa-brands fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
@@ -276,5 +279,5 @@
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-01-11 12:28:29.289957+00:00
+Build Date UTC : 2025-01-11 15:01:47.389574+00:00
 -->
